--- a/experiment/simulation/css/style.css
+++ b/experiment/simulation/css/style.css
@@ -8,55 +8,66 @@ html {
 body {
   font-family: "comic sans MS";
 }
+
 #h {
   position: absolute;
-  top: 250px;
-  left: 253px;
+  top: 263px;
+  left: 267px;
+  background: none;
 }
 #v {
   position: absolute;
-  top: 255px;
-  left: 234px;
+  top: 260px;
+  left: 233px;
+  background: none;
 }
 #a {
   position: absolute;
   top: 218px;
   left: 273px;
+  background: none;
 }
 #hhhh {
   position: absolute;
   top: 53px;
   left: 78px;
+  background: none;
 }
 #aa {
   position: absolute;
   top: 318px;
   left: 273px;
+  background: none;
 }
 #bb {
   position: absolute;
   top: 100px;
   left: 350px;
+  background: none;
 }
 #b11 {
   position: absolute;
   top: 100px;
   left: 402px;
+  background: none;
 }
 #b2 {
   position: absolute;
   top: 408px;
   left: 423px;
+  background: none;
 }
 #b {
   position: absolute;
   top: 408px;
   left: 363px;
+  background: none;
 }
 #b22 {
   position: absolute;
   top: 206px;
   left: 435px;
+  background: none;
 }
 .label {
   border: none;
