--- a/experiment/simulation/css/style.css
+++ b/experiment/simulation/css/style.css
@@ -205,6 +205,40 @@ body {
   text-align: center;
   background: #000;
 }
+
+.legend {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  top: 420px;
+  width: 300px;
+  box-sizing: border-box;
+}
+ol {
+  background-color: #171717;
+  color: #fff;
+  position: absolute;
+  left: 0px;
+  top: -360px;
+  padding: 15px 35px;
+  border-radius: 15px;
+}
+div ol {
+  visibility: hidden;
+}
+
+.legend-data {
+  font-weight: bold;
+  width: 80px;
+  padding-left: 20px;
+}
+.legend-data:hover {
+  border: 1px dotted black;
+}
+.legend-data:hover + ol {
+  visibility: visible;
+}
+
 #pumptext {
   position: absolute;
   top: 20px;
